# CIC

./: AGENTS.md  CHANGELOG.md  CIC-Design-Language-Obsidian.html  CLAUDE.md  HANDOVER.md  LICENSE  PRD-CIC-Platform.md  ai-provider-layer.md  auto-implement-all.ps1  eslint.config.js  index.html  package-lock.json  package.json  run-local-implementer.ps1  vite.config.ts
.agent/handoff/: MANIFEST.md  PLAN.md  QUALITY_GATES.md  REVISION_REQUEST.md  SPEC.md  STATE.md  TESTS.md
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/agents/: domain.md  issue-tracker.md
graphify-out/: .graphify_chunk_01.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
specs/001-tauri-shell/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-design-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sqlite-data-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-app-shell-domains/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-vault-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-vault-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-course-moc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-dashboard-real-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-vault-scoped-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-srs-fsrs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-source-file-import/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-daily-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-course-session-planner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-reminders-notifications-f9/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-projects-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-ai-provider-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-feynman-tutor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-retrieval-quizzes/: plan.md  spec.md
specs/020-course-generator/: spec.md
specs/021-interleaving/: spec.md
src/: App.test.tsx  App.tsx  main.tsx  polyfills.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  rag.rs
src/ai/: boundary.test.ts  classification.test.ts  classification.ts  config.test.ts  config.ts  errors.test.ts  errors.ts  provider.ts  redaction.stress.test.ts  router.ts  routerImpl.embed-route.test.ts  routerImpl.fallback.test.ts  routerImpl.lockdown.test.ts  routerImpl.ts  secrets.test.ts  secrets.ts
src/app/: a11y.test.tsx  navigation.ts  router.test.tsx  router.tsx  test-support.tsx
src/db/: bootstrap.ts  executor.ts  index.ts  integrity.cascade.test.ts  integrity.fk.test.ts  integrity.roundtrip.test.ts  integrity.validation.test.ts  migrate.evolution.test.ts  migrate.lossless.test.ts  migrate.partial.test.ts  migrate.srs.test.ts  migrate.test.ts  migrate.ts  migrate.vaults.test.ts  test-fixtures.ts
src/notifications/: NotifierProvider.tsx  notifier.ts
src/styleguide/: StyleGuide.tsx  contrast.test.ts  contrast.ts
src/styles/: fonts.ts  theme.css
src/vault/: bootstrap.ts  errors.ts  fingerprint.ts  frontmatter.test.ts  frontmatter.ts  fs.ts  identity.test.ts  identity.ts  index.ts  paths.safety.test.ts  paths.test.ts  paths.ts  reader.drift.test.ts  reader.test.ts  reader.ts  (+6 more)
(+490 files in other folders)
