[package]
name = "cic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Feature 016: native OS credential store for the AI provider layer's SecretStore.
# `keyring` v3 wraps the platform credential store directly (Windows Credential Manager,
# macOS Keychain Services, Linux libsecret). Used by a thin custom Tauri command
# (ai_keychain_{set,get,delete}); the TypeScript adapter at src/ai/adapters/secrets/tauri.ts
# is the only invoker. Per Constitution II, secrets never live in plaintext on disk.
keyring = "3"
# Feature 016 (CORS fix): native HTTP for AI provider calls.
# …
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
# Feature 017: vector store via sqlite-vec. Mozilla-backed brute-force exact KNN
# with binary-quantisation option. Rust crate + npm package; the Rust side manages
# the vec0 virtual table; the TS adapter at src/ai/adapters/rag/tauri.ts calls
# custom commands in src-tauri/src/rag.rs.
sqlite-vec = "0.1.9"
# Feature 017 companion: rusqlite with bundled SQLite so custom RAG commands can
# directly execute sqlite-vec functions (vec_f32, MATCH) without going through
# the tauri-plugin-sql JS layer.
rusqlite = { version = "0.32", features = ["bundled"] }

